--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-typed": "^2.0.12",
+    "react-use-measure": "^2.1.1",
     "react-viewport-hooks": "^1.5.0",
     "web-vitals": "^2.1.4"
   },
