--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "framer-motion": "^11.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-lite-youtube-embed": "^2.4.0",
     "react-router-dom": "^6.22.0",
     "react-router-hash-link": "^2.4.3",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "autoprefixer": "^10.4.18",
     "tailwindcss": "^3.4.1"
   }
 }
